<resources>
    <string name="app_name">AndroidDashbaordUI1</string>
    <string name="record">Record</string>
    <string name="more">More</string>
    <string name="short_views">Short Views</string>
    <string name="clients">Clients</string>
    <string name="_250">250</string>
    <string name="impacted">Impacted</string>
    <string name="_72">72</string>
    <string name="following">Following</string>
    <string name="_120">$120</string>
    <string name="this_is_copy_paste">This is copy paste</string>
    <string name="rawalpindi">Rawalpindi</string>
    <string name="_10am_06pm">10am-06pm</string>
    <string name="new_idea">New Idea</string>
    <string name="_221">$221</string>
    <string name="peshawar">Peshawar</string>
    <string name="_09am_07pm">09am-07pm</string>
    <string name="_700">$700</string>
    <string name="hydro_lifting">Hydro Lifting</string>
    <string name="_10am_to_08pm">10am to 08pm</string>
    <string name="islamabad">Islamabad</string>
    <string name="_422">$422</string>
    <string name="hydrochloric_acid">Hydrochloric Acid</string>
    <string name="karachi">Karachi</string>
    <string name="_9am_to_9pm">9am to 9pm</string>
</resources>