<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_125sdp"
        android:background="@color/primary"
        android:id="@+id/viewHeaderBg"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:textSize="@dimen/_20ssp"
        android:text="@string/record"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/txtTitle"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/search_icon"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
        app:layout_constraintTop_toTopOf="@id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardHeader"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:cardBackgroundColor="@color/card_bg"
        app:cardCornerRadius="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/viewHeaderBg"
       app:layout_constraintBottom_toBottomOf="@id/viewHeaderBg"
        >
      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/_16sdp"
          >

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/txtV"
               android:text="@string/short_views"
               android:textSize="@dimen/_14ssp"
               android:textColor="@color/primary_txt"
               android:textStyle="bold"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"

               />
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/more"
              android:textSize="@dimen/_12ssp"
              android:textColor="@color/primary"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              />
          <LinearLayout
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/_8sdp"
              android:gravity="center"
              android:orientation="vertical"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/txtV"
              app:layout_constraintEnd_toStartOf="@id/layoutImpacted"
              android:id="@+id/layoutClient"
              >
              <androidx.appcompat.widget.AppCompatImageView
                  android:layout_width="@dimen/_28sdp"
                  android:layout_height="@dimen/_28sdp"
                  android:src="@drawable/user"
                  />
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/clients"
                  android:textSize="@dimen/_10ssp"
                  android:layout_marginTop="@dimen/_4sdp"
                  android:textColor="@color/secondary_txt"
                  />
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/_250"
                  android:textSize="@dimen/_16ssp"
                  android:textColor="@color/primary_txt"
                  />
          </LinearLayout>
          <LinearLayout
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/_8sdp"
              android:gravity="center"
              android:orientation="vertical"
              app:layout_constraintTop_toBottomOf="@id/txtV"
              app:layout_constraintStart_toEndOf="@id/layoutClient"
              app:layout_constraintEnd_toStartOf="@id/layoutFollowing"
              android:id="@+id/layoutImpacted"
              >
              <androidx.appcompat.widget.AppCompatImageView
                  android:layout_width="@dimen/_28sdp"
                  android:layout_height="@dimen/_28sdp"
                  android:src="@drawable/user"
                  />
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/impacted"
                  android:textSize="@dimen/_10ssp"
                  android:layout_marginTop="@dimen/_4sdp"
                  android:textColor="@color/secondary_txt"
                  />
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/_72"
                  android:textSize="@dimen/_16ssp"
                  android:textColor="@color/primary_txt"
                  />
          </LinearLayout>
          <LinearLayout
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/_8sdp"
              android:gravity="center"
              android:orientation="vertical"
              app:layout_constraintTop_toBottomOf="@id/txtV"
              app:layout_constraintStart_toEndOf="@id/layoutImpacted"
              android:id="@+id/layoutFollowing"
              app:layout_constraintEnd_toEndOf="parent"
              >
              <androidx.appcompat.widget.AppCompatImageView
                  android:layout_width="@dimen/_28sdp"
                  android:layout_height="@dimen/_28sdp"
                  android:src="@drawable/user"
                  />
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/following"
                  android:textSize="@dimen/_10ssp"
                  android:layout_marginTop="@dimen/_4sdp"
                  android:textColor="@color/secondary_txt"
                  />
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="660"
                  android:textSize="@dimen/_16ssp"
                  android:textColor="@color/primary_txt"
                  />
          </LinearLayout>
      </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_16sdp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardHeader"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <include layout="@layout/dashboard_item_1"/>
        <include layout="@layout/dashboard_item_2"/>
        <include layout="@layout/dashboard_item_3"/>
        <include layout="@layout/dashboard_item_4"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>